--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "azure-sb": "^0.10.6",
     "bunyan": "^1.8.12",
     "chalk": "^2.4.2",
     "dotenv": "^6.2.0",
