--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Scripts used only once",
   "main": "index.js",
   "scripts": {
+    "start": "node .",
     "start:get-double-enrollments": "node get-double-enrollments/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
