--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^6.2.0",
     "inquirer": "^6.2.2",
     "kth-canvas-api": "^0.15.7",
+    "ldapjs": "^1.0.2",
     "ora": "^3.0.0",
     "papaparse": "^4.6.3",
     "request": "^2.88.0",
