--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "papaparse": "^4.6.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
+  },
+  "devDependencies": {
+    "standard": "^12.0.1"
   }
 }
