--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@kth/canvas-api": "^1.1.1",
     "azure-sb": "^0.10.6",
     "bunyan": "^1.8.12",
     "chalk": "^2.4.2",
