--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@kth/canvas-api": "^1.1.1",
+    "@kth/canvas-api": "^2.1.0",
     "azure-sb": "^0.10.6",
     "bunyan": "^1.8.12",
     "chalk": "^2.4.2",
@@ -19,6 +19,7 @@
     "inquirer": "^6.2.2",
     "kth-canvas-api": "^0.15.7",
     "ldapjs": "^1.0.2",
+    "ldapts": "^1.9.0",
     "ora": "^3.0.0",
     "papaparse": "^4.6.3",
     "request": "^2.88.0",
